--- a/Seminarski-Klijent/src/forme/zaposleni/FormaIzmeniZaposlenog.form
+++ b/Seminarski-Klijent/src/forme/zaposleni/FormaIzmeniZaposlenog.form
@@ -293,6 +293,9 @@
             <Property name="text" type="java.lang.String" value="Izmeni zaposlenog"/>
             <Property name="enabled" type="boolean" value="false"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnIzmeniZaposlenogActionPerformed"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
