--- a/Seminarski-Klijent/src/forme/MainForma.form
+++ b/Seminarski-Klijent/src/forme/MainForma.form
@@ -82,6 +82,9 @@
               <Properties>
                 <Property name="text" type="java.lang.String" value="Obrisi"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="miObrisiZaposleniActionPerformed"/>
+              </Events>
             </MenuItem>
           </SubComponents>
         </Menu>
