--- a/Seminarski-Klijent/src/forme/MainForma.form
+++ b/Seminarski-Klijent/src/forme/MainForma.form
@@ -44,6 +44,9 @@
               <Properties>
                 <Property name="text" type="java.lang.String" value="Kreiraj"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="miKreirajKampanjuActionPerformed"/>
+              </Events>
             </MenuItem>
             <MenuItem class="javax.swing.JMenuItem" name="miIzmeniKampanju">
               <Properties>
