--- a/Seminarski-Klijent/src/forme/MainForma.form
+++ b/Seminarski-Klijent/src/forme/MainForma.form
@@ -52,6 +52,9 @@
               <Properties>
                 <Property name="text" type="java.lang.String" value="Izmeni"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="miIzmeniKampanjuActionPerformed"/>
+              </Events>
             </MenuItem>
             <MenuItem class="javax.swing.JMenuItem" name="miObrisiKampanje">
               <Properties>
