--- a/Seminarski-Klijent/src/forme/zadatak/FormaPrikaziZadatak.form
+++ b/Seminarski-Klijent/src/forme/zadatak/FormaPrikaziZadatak.form
@@ -158,6 +158,7 @@
             <Property name="editable" type="boolean" value="false"/>
             <Property name="columns" type="int" value="20"/>
             <Property name="rows" type="int" value="5"/>
+            <Property name="autoscrolls" type="boolean" value="false"/>
             <Property name="focusable" type="boolean" value="false"/>
           </Properties>
         </Component>
