Dodata validacija unosa za forme kreiraj partnera i izmeni partnera

--- a/Seminarski-Klijent/src/forme/partner/FormaIzmeniPartnera.form
+++ b/Seminarski-Klijent/src/forme/partner/FormaIzmeniPartnera.form
@@ -71,7 +71,7 @@
                               </Group>
                               <Group type="102" alignment="1" attributes="0">
                                   <EmptySpace min="0" pref="180" max="32767" attributes="0"/>
-                                  <Component id="txtIzaberiPartnera" min="-2" pref="168" max="-2" attributes="0"/>
+                                  <Component id="btnUcitajPartnera" min="-2" pref="168" max="-2" attributes="0"/>
                               </Group>
                           </Group>
                       </Group>
@@ -92,7 +92,7 @@
                   <EmptySpace pref="7" max="32767" attributes="0"/>
                   <Component id="jScrollPane1" min="-2" pref="276" max="-2" attributes="0"/>
                   <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                  <Component id="txtIzaberiPartnera" min="-2" max="-2" attributes="0"/>
+                  <Component id="btnUcitajPartnera" min="-2" max="-2" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -129,12 +129,12 @@
             </Component>
           </SubComponents>
         </Container>
-        <Component class="javax.swing.JButton" name="txtIzaberiPartnera">
+        <Component class="javax.swing.JButton" name="btnUcitajPartnera">
           <Properties>
             <Property name="text" type="java.lang.String" value="U&#x10d;itaj partnera"/>
           </Properties>
           <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txtIzaberiPartneraActionPerformed"/>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnUcitajPartneraActionPerformed"/>
           </Events>
         </Component>
       </SubComponents>
