Dodata validacija u forme kreiraj kampanju i izmeni kampanju

--- a/Seminarski-Klijent/src/forme/kampanja/FormaIzmeniKampanju.form
+++ b/Seminarski-Klijent/src/forme/kampanja/FormaIzmeniKampanju.form
@@ -177,6 +177,7 @@
                 <StringItem index="3" value="Item 4"/>
               </StringArray>
             </Property>
+            <Property name="enabled" type="boolean" value="false"/>
           </Properties>
           <AuxValues>
             <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value=""/>
@@ -197,6 +198,7 @@
                 <StringItem index="3" value="Item 4"/>
               </StringArray>
             </Property>
+            <Property name="enabled" type="boolean" value="false"/>
           </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="cmbGlavniOdgovorniActionPerformed"/>
